@@ -11,12 +11,11 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkCmds.c,v 1.31.2.2 2004/11/12 23:54:54 hobbs Exp $
+ * RCS: @(#) $Id: tkCmds.c,v 1.31.2.3 2006/03/13 18:18:59 dgp Exp $
  */
 
 #include "tkPort.h"
 #include "tkInt.h"
-#include <errno.h>
 
 #if defined(WIN32)
 #include "tkWinInt.h"
