@@ -12,14 +12,13 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkMacOSXWm.c,v 1.7.2.16 2006/02/09 19:09:43 das Exp $
+ * RCS: @(#) $Id: tkMacOSXWm.c,v 1.7.2.17 2006/03/13 18:19:00 dgp Exp $
  */
 #include <Carbon/Carbon.h>
 
 #include "tkPort.h"
 #include "tkInt.h"
 #include "tkMacOSXInt.h"
-#include <errno.h>
 #include "tkScrollbar.h"
 #include "tkMacOSXWm.h"
 #include "tkMacOSXEvent.h"
